<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/image_hint"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pizza"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/label_delivery_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/radio_btn_group_delivery_method"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="157dp"
            android:layout_height="98dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/radio_btn_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_delivery_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_btn_pick_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_pick_up_text"
                android:textSize="20sp" />
        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="23dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:layout_editor_absoluteX="-17dp" />

        <TextView
            android:id="@+id/label_num_pizzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_num_pizzas"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/input_num_pizzas"
            android:layout_width="188dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/input_num_pizzas_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/label_num_pizzas" />

        <TextView
            android:id="@+id/label_crust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24sp"
            android:text="@string/label_crust"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <RadioGroup
            android:id="@+id/radio_btn_group_crust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">


            <RadioButton
                android:id="@+id/radio_btn_hand_tossed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_hand_tossed_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_btn_thin_crust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_thin_crust_text"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_btn_group_crust" />

        <TextView
            android:id="@+id/label_toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_toppings"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider3" />

        <CheckBox
            android:id="@+id/checkbox_mushrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/checkbox_topping_mushrooms"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_toppings" />

        <CheckBox
            android:id="@+id/checkbox_pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/checkbox_topping_pepperoni"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/checkbox_mushrooms"
            app:layout_constraintTop_toBottomOf="@+id/label_toppings" />

        <CheckBox
            android:id="@+id/checkbox_sausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/checkbox_topping_sausage"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_mushrooms" />

        <CheckBox
            android:id="@+id/checkbox_green_peppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/checkbox_topping_green_peppers"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/checkbox_mushrooms"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_pepperoni" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_sausage" />

        <TextView
            android:id="@+id/label_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_drinks"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <EditText
            android:id="@+id/input_num_drinks"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/input_num_drinks_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/divider5"
            android:layout_width="420dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_num_drinks" />

        <TextView
            android:id="@+id/label_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_tip"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <RadioGroup
            android:id="@+id/radio_btn_group_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5">


            <RadioButton
                android:id="@+id/radio_btn_ten_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_ten_percent_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_btn_fifteen_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_fifteen_percent_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_btn_twenty_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_twenty_percent_text"
                android:textSize="20sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>